# ROS-workspace

./: .rosinstall  .rosinstall.bak  README.md  inertia_calculator.py
a1_description/meshes/: thigh_mirror.stl
aliengo_description/xacro/: aliengo.urdf
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/msg/: Num.msg
beginner_tutorials/scripts/: add_two_ints_clients.py  server.py
biped/: CMakeLists.txt  package.xml
biped/launch/: main_rviz.launch
littledog/: CMakeLists.txt  package.xml
littledog/config/: littledog.yaml
littledog/launch/: display_gazebo.launch  littledog_control.launch  littledog_rviz.launch  main.launch  spawn_littledog.launch
littledog/urdf/: littledog.urdf
littledog_description/: CMakeLists.txt  package.xml
littledog_description/launch/: main.launch
littledog_description/urdf/: littledog_srd.urdf
manipulator/: CMakeLists.txt  package.xml
manipulator/launch/: rviz.launch
manipulator/urdf/: manipulator.urdf
mira_robot/: CMakeLists.txt  package.xml
mira_robot/config/: config.rviz
mira_robot/launch/: mira.launch  mira_spawn.launch
mira_robot/urdf/: mira_inertia.urdf
motion_plan_mrobot/scripts/: reading_laser.py
motion_planner/: CMakeLists.txt  package.xml
motion_planner/scripts/: reading_laser.py
mrobot/: CMakeLists.txt  package.xml
mrobot/config/: mrobot.rviz
mrobot/launch/: display_gazebo.launch  mrobot_rviz.launch  (+1 more)
my_gurdy_description/: CMakeLists.txt  package.xml
my_world/: CMakeLists.txt  package.xml
spot/: CMakeLists.txt  package.xml
two_link/: CMakeLists.txt  package.xml
(+82 files in other folders)
